# TOGM-Rust-v3.4-RIE

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs
docs/: Directory.txt  WHITEPAPER_COMPLIANCE.md
include/: togm.h
src/: audit.rs  config.rs  contacts.rs  iron_laws.rs  lib.rs  watchdog.rs
src/binary_verify/: genesis_hash.rs  local_self_verify.rs  mod.rs
src/core/: gf256.rs  masterpad.rs  mod.rs  otp_engine.rs  ratchet.rs  sip64.rs  universal_hash.rs  xor.rs
src/entropy/: aggregator.rs  audio.rs  custom.rs  jitter.rs  mod.rs  rdrand.rs  sources.rs  sp800_90b.rs  video.rs
src/group_history/: mod.rs  policy.rs  share.rs  verify.rs
src/history/: api.rs  index.rs  mod.rs  prune.rs
src/messaging/: cleanup.rs  delete.rs  mod.rs  queue.rs  retract.rs
src/messaging/file_transfer/: chunker.rs  mod.rs  receiver.rs  sender.rs
src/mpc/: aggregate.rs  mod.rs  polynomial.rs  quorum.rs  reconstruct.rs  share.rs
src/net/: anonymous_net.rs  bandwidth.rs  mod.rs  noise_xx.rs  outbox.rs  pairwise.rs  rendezvous.rs  sequencer.rs
src/net/drand/: client.rs  health.rs  mod.rs  stream.rs  verify.rs
src/net/i2p/: i2pd_impl.rs  mod.rs
src/net/tor/: arti_impl.rs  mod.rs
src/pad/: burn.rs  lifecycle.rs  mod.rs  monitor.rs  share_encrypt.rs  usage_stats.rs
src/platform/: mod.rs  pc.rs
src/protocol/: messaging.rs  mod.rs  state_machine.rs
src/protocol/bootstrap/: local.rs  member_extend.rs  mod.rs  orchestrator.rs  stages.rs
src/protocol/control/: admin.rs  binary_attestation.rs  gap.rs  mod.rs  presence.rs  receipt.rs  retract.rs
src/protocol/group_permissions/: acl.rs  mod.rs  permissions.rs  role_management.rs  threshold_sign.rs
src/protocol/multi_device/: limiter.rs  linking.rs  mod.rs  roster.rs  sync.rs
src/recovery/: export.rs  import.rs  local_transfer.rs  mod.rs  verify.rs
src/storage/: mod.rs  raw_files.rs  sqlite_scrypt.rs
