[package]
name = "togm-rust-v3-4-rie"
version = "3.4.0"
edition = "2021"
authors = ["Anonymous Geek Collective"]
description = "Threshold OTP Group Messaging (TOGM) v3.4 RIE: Reinforced Initialization & Entropy Integrity Edition with Scale-Adaptive Enhancements"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daoquynhthu/TOGM-Rust-v3.4-RIE"
keywords = ["cryptography", "messaging", "otp", "mpc", "information-theoretic", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std"]
readme = "README.md"
rust-version = "1.75"

[lib]
crate-type = ["rlib", "staticlib"]
path = "src/lib.rs"

[dependencies]
zeroize = { version = "1.8", features = ["zeroize_derive", "alloc"] }
memmap2 = { version = "0.9", features = ["stable_deref_trait"] }
blake3 = { version = "1.5", default-features = false, features = ["std"] }
scrypt = { version = "0.11", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = []
drand = []
i2p = []
dbap = []
paranoid = []
watchdog = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = "symbols"
debug = false

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
inherits = "dev"
opt-level = 1

[build-dependencies]
cbindgen = "0.26"